tweak to the footer margin to allow row div to align correctly

--- a/assets/css/ftboth.css
+++ b/assets/css/ftboth.css
@@ -81,10 +81,6 @@ footer {
   padding-bottom: 20px;
 }
 
-footer div.row {
-  margin-left: 60px;
-}
-
 [class^="icon-"],
 [class*=" icon-"] {
   margin-top: 2px;
@@ -108,7 +104,7 @@ span.post-nav [class*=" icon-"] {
 }*/
 
 span.post-nav a {
-  font-size: 11px;
+  font-size: 13px;
 }
  /* divs containing snippets in side bars */
 div.side-snippet {
